web/css/default.css
/* Global */

body {
  color: black;
  font-size: 1.2em;
  font-family: helvetica, sans-serif;
  line-height: 1.56em;
  border-top: 5px solid #808000;
}

main {
  margin: 0px auto 0px auto;
  max-width: 720px;
  padding: 1em;
}

h1 {
  font-size: 1.5em;
  margin-bottom: 0.5em;
}

h2 {
  font-size: 1.62em;
}

hr {
  margin-bottom: 1.4em;
}

p, ul {
  padding-bottom: 1.4em;
}

li {
  padding-bottom: 0.25em;
}

em {
  font-style: italic;
}

#content > :last-child {
  padding-bottom: 0;
}

#content ul > :last-child {
  padding-bottom: 0;
}

a {
  text-decoration: none;
  color: #808000;
}

a:hover {
  text-decoration: underline;
  color: #606060;
}

#content {
  padding-top: 1em;
  padding-bottom: 1em;
}

/* Header */

header {
  padding-top: 1em;
  border-bottom: 1px dotted #808000;
}

header h2 {
  font-size: 1.5em;
  padding-bottom: 0;
}

header h2 a:hover {
  text-decoration: none;
}

#fname {
  color: black;
}

#lname {
  color: #696969;
}

header ul {
  float: right;
}

header li {
  display: inline;
  font-size: 1.0em;
  padding-left: .3em;
}

/* Footer */

#social li {
  display: inline;
  font-size: 1.3em;
  padding-left: .3em;
}

#social a {
  color: black;
}

#social a:hover {
  text-decoration: none;
}

footer {
  border-top: solid 2px #808000;
  color: #555;
  padding-top: .3em;
  padding-bottom: .3em;
}

footer span {
  font-size: .8em;
  float: right;
}

/* Blog */

article {
  margin-bottom: 0.5em;
}

#tag-title {
  margin-bottom: 1em;
}

#blog h3 {
  display: inline-block;
}

#blog a {
  color: #606060;
}

time {
  color: #999999;
  display: inline-block;
  font-size: .9em;
  width: 15ex;
}

/* Posts */

.post-body {
  clear: both;
}

.post-body time {
  margin-bottom: 1em;
  display: block;
}

.post-body > :last-child {
  padding-bottom: 0;
}

.post-body .tags {
  display: inline-block;
  font-size: 0.9em
}

@media only screen
  and (min-device-width: 320px)
  and (max-device-width: 667px)
  {

    header ul {
      float: none;
    }

    footer span {
      float: none;
      display: inline-block;
      width: 100%;
      text-align: center;
    }

    #social {
      width: 100%;
      text-align: center;
    }
}

